# libresect

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_clang.ps1  build_clang.sh  resect.c  resect.h  test.c  valgrind.sup
builder/: README.org  linux.Dockerfile  windows.Dockerfile
docker-builder/: README.org  build-linux.sh
docker-builder/linux/: Dockerfile  entrypoint.sh
docker-builder/windows/: windows.Dockerfile
src/: context.c  decl.c  filtering.c  parser.c  resect_private.h  shaking.c  type.c  util.c
test/: Testo.cpp  Testo.hpp  test.c
